// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product Tile component Renders as expected for missing attributes 1`] = `
<div>
  <div
    class="flex p-6"
  >
    <div
      class="shrink-0 self-center"
    >
      <img
        alt="Espresso Raritäten Set"
        class="w-32"
        src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
      />
    </div>
    <div
      class="flex flex-col justify-between p-2"
    >
      <div
        class="text-base leading-6 font-semibold"
      >
        Espresso Raritäten Set
      </div>
      <div
        class="text-coreUI-text-secondary text-base leading-6"
      >
        WeBean
      </div>
      <div
        class="text-coreUI-text-secondary text-base leading-6"
      >
        Kolumbien
      </div>
      <div>
        <span
          class="mr-1 text-base leading-6 font-semibold"
        >
          19,99 €
        </span>
        <span
          class="text-coreUI-text-secondary text-xs leading-4"
        >
          (
          10,00 €
          /kg)
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Product Tile component Renders as expected for missing images 1`] = `
<div>
  <div
    class="flex p-6"
  >
    <div
      class="shrink-0 self-center"
    >
      <img
        alt="Espresso Raritäten Set"
        class="w-32"
        src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
      />
    </div>
    <div
      class="flex flex-col justify-between p-2"
    >
      <div
        class="text-base leading-6 font-semibold"
      >
        Espresso Raritäten Set
      </div>
      <div
        class="text-coreUI-text-secondary text-base leading-6"
      >
        WeBean
      </div>
      <div
        class="text-coreUI-text-secondary text-base leading-6"
      >
        Kolumbien
      </div>
      <div
        class="text-coreUI-text-secondary text-base leading-6"
      >
        Filter
      </div>
      <div>
        <span
          class="mr-1 text-base leading-6 font-semibold"
        >
          19,99 €
        </span>
        <span
          class="text-coreUI-text-secondary text-xs leading-4"
        >
          (
          10,00 €
          /kg)
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Product Tile component Renders correctly 1`] = `
<div>
  <div
    class="flex p-6"
  >
    <div
      class="shrink-0 self-center"
    >
      <img
        alt="Espresso Raritäten Set"
        class="w-32"
        src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
      />
    </div>
    <div
      class="flex flex-col justify-between p-2"
    >
      <div
        class="text-base leading-6 font-semibold"
      >
        Espresso Raritäten Set
      </div>
      <div
        class="text-coreUI-text-secondary text-base leading-6"
      >
        WeBean
      </div>
      <div
        class="text-coreUI-text-secondary text-base leading-6"
      >
        Kolumbien
      </div>
      <div
        class="text-coreUI-text-secondary text-base leading-6"
      >
        Filter
      </div>
      <div>
        <span
          class="mr-1 text-base leading-6 font-semibold"
        >
          19,99 €
        </span>
        <span
          class="text-coreUI-text-secondary text-xs leading-4"
        >
          (
          10,00 €
          /kg)
        </span>
      </div>
    </div>
  </div>
</div>
`;
